--- a/clusters/my-cluster/fluxstart.yaml
+++ b/clusters/my-cluster/fluxstart.yaml
@@ -3,7 +3,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
   name: fluxstart
-  namespace: flux-system
+  namespace: flux
 spec:
   interval: 1m0s
   ref:
