--- a/clusters/my-cluster/fluxstart-kustomization.yaml
+++ b/clusters/my-cluster/fluxstart-kustomization.yaml
@@ -12,6 +12,6 @@ spec:
   sourceRef:
     kind: GitRepository
     name: fluxstart
-  targetNamespace: default
+  targetNamespace: hpa
   timeout: 3m0s
   wait: true
