--- a/workloads/podinfo-hpa.yaml
+++ b/workloads/podinfo-hpa.yaml
@@ -10,6 +10,7 @@ spec:
     name: podinfo
   minReplicas: 2
   maxReplicas: 4
+  targetCPUUtilizationPercentage: 50
   metrics:
   - type: Resource
     resource:
