--- a/workloads/podinfo-svc.yaml
+++ b/workloads/podinfo-svc.yaml
@@ -25,8 +25,10 @@ spec:
   - http:
       paths:
       - backend:
-          serviceName: podinfo
-          servicePort: 9898
-        pathType: ImplementationSpecific
+	  service:
+            name: podinfo
+            port:
+              number: 9898
         path: /
+	pathType: ImplementationSpecific
     host: podinfo.20.76.153.91.nip.io
